--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "lazyer-ui-1": "0.0.2",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0-0"
+    "@vue/compiler-sfc": "^3.0.0-0",
+    "lazyer-ui-1": "0.0.5"
   },
   "_id": "lazyer-ui-test@0.1.0",
   "readme": "ERROR: No README data found!"
